# ModernCppErrorHandling

./: CMakeLists.txt  README.md
tests/: pipeline_error_handling_test.cpp
